--- a/packages/app/src/styles/index.scss
+++ b/packages/app/src/styles/index.scss
@@ -1,10 +1,3 @@
-@import './variables.scss';
+@import '~@lumx/core/scss/lumx-theme-lumapps.scss';
 @import './reset.scss';
 @import './base.scss';
-@import '../components/Card/index.scss';
-@import '../components/Title/index.scss';
-@import '../components/Input/index.scss';
-@import '../components/Button/index.scss';
-@import '../components/BulletPoints/index.scss';
-@import '../components/Snackbar/index.scss';
-
