--- a/packages/app/src/styles/index.scss
+++ b/packages/app/src/styles/index.scss
@@ -1,3 +1,5 @@
 @import '~@lumx/core/scss/lumx-theme-lumapps.scss';
 @import './reset.scss';
 @import './base.scss';
+@import '../Configurator/index.scss';
+@import '../App/index.scss';
