added helper label for form

--- a/packages/app/src/styles/index.scss
+++ b/packages/app/src/styles/index.scss
@@ -2,4 +2,6 @@
 @import './reset.scss';
 @import './base.scss';
 @import '../Configurator/index.scss';
+@import '../Configurator/Dependencies/index.scss';
+@import '../Configurator/Label/index.scss';
 @import '../App/index.scss';
