--- a/packages/app/src/styles/reset.scss
+++ b/packages/app/src/styles/reset.scss
@@ -23,3 +23,7 @@ html {
     max-width: 100%;
     height: auto;
   }
+
+.lumx-select--theme-light .lumx-select__wrapper {
+  background-color: white;
+}
