started working with the graph type filter

--- a/packages/app/src/styles/index.scss
+++ b/packages/app/src/styles/index.scss
@@ -4,4 +4,5 @@
 @import '../Configurator/index.scss';
 @import '../Configurator/Dependencies/index.scss';
 @import '../Configurator/Label/index.scss';
+@import '../Configurator/Select/index.scss';
 @import '../App/index.scss';
