added graph filter

--- a/packages/app/src/Configurator/Label/index.scss
+++ b/packages/app/src/Configurator/Label/index.scss
@@ -6,7 +6,7 @@
     &__help {
         border-radius: 50% !important;
         margin-top: -($lumx-spacing-unit-tiny / 2);
-        margin-left: $lumx-spacing-unit-tiny;
+        margin-left: $lumx-spacing-unit;
         border: 1px lumx-color-variant('dark', 'N') solid;
     }
 
